<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuSuggestFragment">

    <TextView
        android:id="@+id/text_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="불닭볶음면"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_menu" />

    <ScrollView
        android:id="@+id/scroll_view_menu_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_menu_name"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_buttons">

        <TextView
            android:id="@+id/text_menu_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다아주아주아주아주아주아주아주아주아주아주아주맛있는음식이다"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </ScrollView>

    <Button
        android:id="@+id/button_menu_suggest"
        android:layout_width="174dp"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:text="@string/button_menu_suggest"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_menu_suggest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_menu_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/button_menu_recipe" />

        <Button
            android:id="@+id/button_menu_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/button_menu_history" />

        <Button
            android:id="@+id/button_menu_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_menu_comments" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
